--- a/parserMAXPCMDecoredLogs.ipynb
+++ b/parserMAXPCMDecoredLogs.ipynb
@@ -148,7 +148,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing govnologs Phase 1: 100%|██████████████████████████████████████████████▊| 935123/938125.0 [00:54<00:00, 17306.98it/s]\n"
+      "Parsing govnologs Phase 1: 100%|██████████████████████████████████████████▊| 935123/938125.0 [01:37<00:00, 9605.15it/s]\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Save govnodata: 100%|█████████████████████████████████████████████████████████████████████████| 3/3 [00:11<00:00,  3.83s/it]\n"
+      "Save govnodata: 100%|████████████████████████████████████████████████████████████████████| 3/3 [00:24<00:00,  8.32s/it]\n"
      ]
     }
    ],
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d3bf91e8",
    "metadata": {
     "tags": []
@@ -407,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
