new data format(not work)

--- a/parserMAXPCMDecoredLogs.ipynb
+++ b/parserMAXPCMDecoredLogs.ipynb
@@ -23,14 +23,14 @@
    },
    "outputs": [],
    "source": [
-    "WIDTH = int(720/4)\n",
+    "WIDTH = int(720)\n",
     "\n",
     "def normilizeFrame(frame):\n",
     "    frame = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "    frame = cv2.resize(frame, (WIDTH, frame.shape[0]), interpolation=cv2.INTER_NEAREST)\n",
     "    return frame\n",
     "\n",
-    "cap = cv2.VideoCapture('shakalwhitenoise1min.avi')\n",
+    "cap = cv2.VideoCapture('testfiles/999.avi')\n",
     "if (cap.isOpened()== False): \n",
     "  print(\"Error opening video stream or file\")\n",
     "\n",
@@ -54,7 +54,7 @@
       "720.0\n",
       "625.0\n",
       "1.0\n",
-      "1501.0\n"
+      "751.0\n"
      ]
     }
    ],
@@ -125,7 +125,7 @@
     "#falses = np.zeros(16, dtype=bool)\n",
     "dictionary = []  #[frame, line]\n",
     "inputLines = []\n",
-    "service = [] #[has pcm, bitmode(14/16)]\n",
+    "service = [] #[has pcm]\n",
     "binaryData = []\n",
     "#blockL0 = []\n",
     "#blockR0 = []\n",
@@ -138,6 +138,35 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "60d804f6-60d3-4bb3-a04d-f054bb8b2763",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Parsing govnologs Phase 1:   0%|                                                                                                                                                                               | 0/469375.0 [00:00<?, ?it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "def convertDataBlock(data):\n",
+    "    data = list(data.replace('#', '1').replace('-', '0'))\n",
+    "    data = [bool(int(numeric_string)) for numeric_string in data]\n",
+    "    \n",
+    "    data = data[4:88]\n",
+    "\n",
+    "    return bitsToInt(data[:14]), bitsToInt(data[14:28]), bitsToInt(data[28:42]), bitsToInt(data[42:56]), bitsToInt(data[56:70]), bitsToInt(data[70:84]) #L0, R0, L1, R1, L2, R2\n",
+    "\n",
+    "bitsToInt = lambda ls: int(\"\".join([str(int(b)) for b in ls]), 2)\n",
+    "\n",
+    "bar = tqdm(total=height * frameCount)\n",
+    "bar.set_description(\"Parsing govnologs Phase 1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "d1db5826-c719-4764-8b95-e0a3f44e69c5",
    "metadata": {
     "tags": []
@@ -147,23 +176,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing govnologs Phase 1: 100%|██████████████████████████████████████████▊| 935123/938125.0 [01:37<00:00, 9605.15it/s]\n"
+      "Parsing govnologs Phase 1: : 941635it [00:48, 19612.49it/s]                                                                                                                                                                                 \n"
      ]
     }
    ],
    "source": [
-    "def convertDataBlock(data):\n",
-    "  data = list(data.replace('#', '1').replace('-', '0'))\n",
-    "  data = [bool(int(numeric_string)) for numeric_string in data]\n",
-    "  return data\n",
-    "\n",
-    "bar = tqdm(total=height * frameCount)\n",
-    "bar.set_description(\"Parsing govnologs Phase 1\")\n",
     "while lineBin:\n",
     "    typeLine=re.match('\\\"?\\[(V2D)\\]', lineBin)\n",
     "    if typeLine != None:\n",
     "        typeLine = typeLine.group(1)\n",
     "        if typeLine == 'V2D':\n",
+    "            bar.update(1)\n",
     "            parse = re.match('.?\\[V2D\\].*F\\[(\\d+)\\].*L\\[(\\d+)\\].*\\[([#-]{137})\\].*(CRC OK|No PCM!|BD CRC!)', lineBin)\n",
     "            if parse and parse.group(3):\n",
     "                framenum = int(parse.group(1))\n",
@@ -193,11 +216,11 @@
     "                dictionary.append([framenum, linenum])\n",
     "                inputLines.append(gray[linenum - 1])\n",
     "                binaryData.append(convertDataBlock(parse.group(3)))\n",
+    "               \n",
     "                if parse.group(4) == 'No PCM!':\n",
-    "                    service.append([False, False])\n",
+    "                    service.append([False])\n",
     "                else:\n",
-    "                    service.append([True, False])\n",
-    "                    \n",
+    "                    service.append([True])\n",
     "    lineBin = fileInBin.readline()\n",
     "cap.release()\n",
     "bar.close()"
@@ -205,105 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "3508d9df",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#def convertDataBlock(data, mode):\n",
-    "#  data = list(data.replace('#', '1').replace('-', '0'))\n",
-    "#  data = [bool(int(numeric_string)) for numeric_string in data]\n",
-    "#  if not mode:\n",
-    "#    data.insert(0, True)\n",
-    "#    data.insert(0, True)\n",
-    "#  return data\n",
-    "#\n",
-    "#offset = -1\n",
-    "#bar = tqdm(total= len(service))\n",
-    "#bar.set_description(\"Parsing govnologs Phase 2\")\n",
-    "#while line:\n",
-    "#    typeLine=re.match('\\\"?\\[(L2B-007)\\]', line)\n",
-    "#    if typeLine != None:\n",
-    "#        typeLine = typeLine.group(1)\n",
-    "#        if typeLine == 'L2B-007':\n",
-    "#            #parse = re.match('.?\\[L2B-007\\].*B\\[(\\d+)\\-(\\d+)\\].*(\\d\\d)\\-BIT (?:\\[|@)([#-01]{14,16})(?:\\]|@) (?:\\[|@)([#-01]{14,16})(?:\\]|@) (?:\\[|@)([#-01]{14,16})(?:\\]|@) (?:\\[|@)([#-01]{14,16})(?:\\]|@) (?:\\[|@)([#-01]{14,16})(?:\\]|@) (?:\\[|@)([#-01]{14,16})(?:\\]|@) (?:\\[|@)([#-01]{14,16})(?:\\]|@) (?:\\[|@)([#-01]{14,16})(?:\\]|@).*(ORIG|P_FIX|Q_FIX)', line)\n",
-    "#            parse = re.match('.?\\[L2B-007\\].*B\\[(\\d+)\\-(\\d+)\\].*(\\d\\d)\\-BIT (?:\\[|@)([#-01]{14})(?:\\]|@) (?:\\[|@)([#-01]{14})(?:\\]|@) (?:\\[|@)([#-01]{14})(?:\\]|@) (?:\\[|@)([#-01]{14})(?:\\]|@) (?:\\[|@)([#-01]{14})(?:\\]|@) (?:\\[|@)([#-01]{14})(?:\\]|@)', line)\n",
-    "#            if parse:\n",
-    "#                framenum = int(parse.group(1))\n",
-    "#                linenum = int(parse.group(2))\n",
-    "#                mode = False if parse.group(3) == '14' else True\n",
-    "#                \n",
-    "#                offset = offset + 1\n",
-    "#                bar.update(1)\n",
-    "#                if not service[offset][0]: #no pcm, skip\n",
-    "#                    blockL0.append(falses)\n",
-    "#                    blockR0.append(falses)\n",
-    "#                    blockL1.append(falses)\n",
-    "#                    blockR1.append(falses)\n",
-    "#                    blockL2.append(falses)\n",
-    "#                    blockR2.append(falses)\n",
-    "#                    continue\n",
-    "#                \n",
-    "#                if not dictionary[offset] == [framenum, linenum]:\n",
-    "#                    if linenum > height:\n",
-    "#                        print('line ' + str(linenum) + ' not in range, skip')\n",
-    "#                        offset = offset - 1\n",
-    "#                        fileIgnored.write(line)\n",
-    "#                        line = fileIn.readline()\n",
-    "#                        continue\n",
-    "#                    else:\n",
-    "#                        print('FUCK!!! ' + str(dictionary[offset]) + ' not a ' + str([framenum, linenum]))\n",
-    "#                        break\n",
-    "#                \n",
-    "#                service[offset][1] = mode\n",
-    "#                if service[offset][0]:\n",
-    "#                    blockL0.append(convertDataBlock(parse.group(4), mode))\n",
-    "#                    blockR0.append(convertDataBlock(parse.group(6), mode))\n",
-    "#                    blockL1.append(convertDataBlock(parse.group(5), mode))\n",
-    "#                    blockR1.append(convertDataBlock(parse.group(7), mode))\n",
-    "#                    blockL2.append(convertDataBlock(parse.group(8), mode))\n",
-    "#                    blockR2.append(convertDataBlock(parse.group(9), mode))\n",
-    "#                else:\n",
-    "#                    blockL0.append(falses)\n",
-    "#                    blockR0.append(falses)\n",
-    "#                    blockL1.append(falses)\n",
-    "#                    blockR1.append(falses)\n",
-    "#                    blockL2.append(falses)\n",
-    "#                    blockR2.append(falses)\n",
-    "#                #print(str(len(dictionary)) + ' ' + str(len(inputLines)) + ' ' + str(len(service)) + ' ' + str(len(blockL0)) + ' ' + str(len(blockR0)) + ' ' + str(len(blockL1)) + ' ' + str(len(blockR1)) + ' ' + str(len(blockL2)) + ' ' + str(len(blockR2)))\n",
-    "#            #print(convertDataBlock(parse.group(10)))\n",
-    "#            #print(convertDataBlock(parse.group(11)))\n",
-    "#            #print(parse.group(12))  #correction\n",
-    "#            #break\n",
-    "#        else:\n",
-    "#            fileIgnored.write(line)\n",
-    "#    else:\n",
-    "#          fileIgnored.write(line)\n",
-    "#    line = fileIn.readline()\n",
-    "#bar.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
-   "id": "0c269222-a45f-430d-8210-1df430da82fb",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "#remove \"extra\" blocks\n",
-    "#while len(dictionary) > offset + 1:\n",
-    "#    del dictionary[offset]\n",
-    "#    del inputLines[offset]\n",
-    "#    del service[offset]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "2c844149-4d88-4b36-9e7e-bea9be54f579",
    "metadata": {},
    "outputs": [
@@ -311,7 +236,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Save govnodata: 100%|████████████████████████████████████████████████████████████████████| 3/3 [00:24<00:00,  8.32s/it]\n"
+      "\n",
+      "Save govnodata:  25%|██████████████████████████████████████████████▎                                                                                                                                          | 2/8 [00:18<00:56,  9.37s/it]\u001b[A\n",
+      "\n",
+      "Save govnodata:   0%|                                                                                                                                                                                                 | 0/3 [00:00<?, ?it/s]\u001b[A\n",
+      "Save govnodata:  33%|█████████████████████████████████████████████████████████████▋                                                                                                                           | 1/3 [00:00<00:00,  2.06it/s]\u001b[A\n",
+      "Save govnodata:  67%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▎                                                             | 2/3 [00:00<00:00,  3.21it/s]\u001b[A\n",
+      "Save govnodata: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:01<00:00,  1.85it/s]\u001b[A\n"
      ]
     }
    ],
@@ -350,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "d3bf91e8",
    "metadata": {
     "tags": []
