--- a/playerFromMAXLogs.ipynb
+++ b/playerFromMAXLogs.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fileInBin = open(\"out_bin_p.log\", \"rt\") \n",
+    "fileInBin = open(\"out_bin.log\", \"rt\") \n",
     "\n",
     "lineBin = fileInBin.readline()"
    ]
