Move boolean array to int operation into neural network Add simple gpu monitoring

--- a/parserMAXPCMDecoredLogs.ipynb
+++ b/parserMAXPCMDecoredLogs.ipynb
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "vl = gray[20]\n",
+    "vl = gray[50]\n",
     "vline = np.array([vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl,vl])\n",
     "\n",
     "cv2.imwrite(\"gray.png\", vline)"
@@ -126,6 +126,7 @@
     "dictionary = []  #[frame, line]\n",
     "inputLines = []\n",
     "service = [] #[has pcm]\n",
+    "binaryData84 = []\n",
     "binaryData = []\n",
     "#blockL0 = []\n",
     "#blockR0 = []\n",
@@ -145,7 +146,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing govnologs Phase 1:   0%|                                                                                                                                                                               | 0/469375.0 [00:00<?, ?it/s]"
+      "Parsing govnologs Phase 1:   0%|                                                          | 0/469375.0 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -155,7 +156,7 @@
     "    data = [bool(int(numeric_string)) for numeric_string in data]\n",
     "    \n",
     "    data = data[4:88]\n",
-    "\n",
+    "    binaryData84.append(data)\n",
     "    return bitsToInt(data[:14]), bitsToInt(data[14:28]), bitsToInt(data[28:42]), bitsToInt(data[42:56]), bitsToInt(data[56:70]), bitsToInt(data[70:84]) #L0, R0, L1, R1, L2, R2\n",
     "\n",
     "bitsToInt = lambda ls: int(\"\".join([str(int(b)) for b in ls]), 2)\n",
@@ -166,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d1db5826-c719-4764-8b95-e0a3f44e69c5",
    "metadata": {
     "tags": []
@@ -176,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Parsing govnologs Phase 1: : 941635it [00:48, 19612.49it/s]                                                                                                                                                                                 \n"
+      "Parsing govnologs Phase 1: : 941635it [02:28, 6336.02it/s]                                                             \n"
      ]
     }
    ],
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "2c844149-4d88-4b36-9e7e-bea9be54f579",
    "metadata": {},
    "outputs": [
@@ -236,13 +237,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\n",
-      "Save govnodata:  25%|██████████████████████████████████████████████▎                                                                                                                                          | 2/8 [00:18<00:56,  9.37s/it]\u001b[A\n",
-      "\n",
-      "Save govnodata:   0%|                                                                                                                                                                                                 | 0/3 [00:00<?, ?it/s]\u001b[A\n",
-      "Save govnodata:  33%|█████████████████████████████████████████████████████████████▋                                                                                                                           | 1/3 [00:00<00:00,  2.06it/s]\u001b[A\n",
-      "Save govnodata:  67%|███████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▎                                                             | 2/3 [00:00<00:00,  3.21it/s]\u001b[A\n",
-      "Save govnodata: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 3/3 [00:01<00:00,  1.85it/s]\u001b[A\n"
+      "Save govnodata: 100%|████████████████████████████████████████████████████████████████████| 3/3 [00:24<00:00,  8.12s/it]\n"
      ]
     }
    ],
@@ -257,6 +252,7 @@
     "bar.update(1)\n",
     "\n",
     "np.save('traindata/binaryData.npy', binaryData)\n",
+    "np.save('traindata/binaryData84.npy', binaryData84)\n",
     "bar.update(1)\n",
     "\n",
     "#np.save('traindata/blockL0.npy', blockL0)\n",
@@ -281,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "d3bf91e8",
    "metadata": {
     "tags": []
@@ -317,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
