--- a/player.ipynb
+++ b/player.ipynb
@@ -219,7 +219,7 @@
     "            gray = deinterlase(gray)\n",
     "            \n",
     "            #cv2.imwrite(\"gray_deint.png\", gray)\n",
-    "            service, data = model.predict(gray, verbose=0)\n",
+    "            service, data = model.predict(gray, verbose=0, batch_size=1)\n",
     "            service = service > 0.5\n",
     "            \n",
     "            audioFrame = bytearray()\n",
@@ -1568,7 +1568,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
