recreate model, learn fail

--- a/monitoring.ipynb
+++ b/monitoring.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "aa9b2363-039c-4904-b114-7e841a19f69d",
    "metadata": {},
    "outputs": [
@@ -10,20 +10,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sat Feb 26 03:45:07 2022       \n",
+      "Fri Oct 14 18:29:27 2022       \n",
       "+-----------------------------------------------------------------------------+\n",
-      "| NVIDIA-SMI 511.23       Driver Version: 511.23       CUDA Version: 11.6     |\n",
+      "| NVIDIA-SMI 515.76       Driver Version: 515.76       CUDA Version: 11.7     |\n",
       "|-------------------------------+----------------------+----------------------+\n",
-      "| GPU  Name            TCC/WDDM | Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
+      "| GPU  Name        Persistence-M| Bus-Id        Disp.A | Volatile Uncorr. ECC |\n",
       "| Fan  Temp  Perf  Pwr:Usage/Cap|         Memory-Usage | GPU-Util  Compute M. |\n",
       "|                               |                      |               MIG M. |\n",
       "|===============================+======================+======================|\n",
-      "|   0  NVIDIA GeForce ... WDDM  | 00000000:03:00.0 Off |                  N/A |\n",
-      "|  0%   36C    P8     7W / 180W |   6571MiB /  8192MiB |      0%      Default |\n",
-      "|                               |                      |                  N/A |\n",
-      "+-------------------------------+----------------------+----------------------+\n",
-      "|   1  NVIDIA GeForce ... WDDM  | 00000000:04:00.0 Off |                  N/A |\n",
-      "|  0%   30C    P8    N/A /  65W |     10MiB /  2048MiB |      0%      Default |\n",
+      "|   0  NVIDIA GeForce ...  Off  | 00000000:02:00.0  On |                  N/A |\n",
+      "| 30%   45C    P0    N/A /  75W |   1763MiB /  2048MiB |     69%      Default |\n",
       "|                               |                      |                  N/A |\n",
       "+-------------------------------+----------------------+----------------------+\n",
       "                                                                               \n",
@@ -32,28 +28,20 @@
       "|  GPU   GI   CI        PID   Type   Process name                  GPU Memory |\n",
       "|        ID   ID                                                   Usage      |\n",
       "|=============================================================================|\n",
-      "|    0   N/A  N/A      1240    C+G                                   N/A      |\n",
-      "|    0   N/A  N/A      6320    C+G   ...y\\ShellExperienceHost.exe    N/A      |\n",
-      "|    0   N/A  N/A      6528    C+G                                   N/A      |\n",
-      "|    0   N/A  N/A      7556    C+G   C:\\Windows\\explorer.exe         N/A      |\n",
-      "|    0   N/A  N/A      7728    C+G   ...es.TextInput.InputApp.exe    N/A      |\n",
-      "|    0   N/A  N/A     10624    C+G                                   N/A      |\n",
-      "|    0   N/A  N/A     12004    C+G   ...32\\CloudNotifications.exe    N/A      |\n",
-      "|    0   N/A  N/A     12172      C   ...ython\\Python39\\python.exe    N/A      |\n",
-      "|    1   N/A  N/A      6320    C+G   ...y\\ShellExperienceHost.exe    N/A      |\n",
-      "|    1   N/A  N/A      7872    C+G                                   N/A      |\n",
+      "|    0   N/A  N/A      1698      G   /usr/lib/Xorg                     208MiB |\n",
+      "|    0   N/A  N/A      3041      G   /usr/bin/kwin_x11                  27MiB |\n",
+      "|    0   N/A  N/A      3063      G   /usr/bin/plasmashell               52MiB |\n",
+      "|    0   N/A  N/A    616913      C   ...conda3/envs/tf/bin/python     1463MiB |\n",
       "+-----------------------------------------------------------------------------+\n"
      ]
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [4]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m clear_output(wait\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      6\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39msystem(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnvidia-smi\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 7\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
      ]
     }
    ],
@@ -70,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed8a5eef-458c-4369-bc9f-bc1c9fa12d2b",
+   "id": "f5af78d9-9b69-47be-89ec-d76f9f8b387e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -92,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
